--- a/css/estilo.css
+++ b/css/estilo.css
@@ -93,7 +93,7 @@ h1, h3 {
 
 .precio {
   font-weight: bold;
-  font-size: 2em;
+  font-size: 200%;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   ;
 
