--- a/css/estilo.css
+++ b/css/estilo.css
@@ -101,17 +101,7 @@ h3::after {
   
 }
 
-.producto:hover {
-  text-align: center;
-  margin: -2.5% 1.5%; /* Ajusté los márgenes para un efecto más dinámico */
-  margin-bottom: 5%;
-  border: 0.5vw;
-  border-style: solid;
-  border-color: rgb(26, 76, 255);
-  transition-property: all;
-  transition-duration: 1s;
-  color: rgb(6, 255, 31);
-}
+
 
 
 
@@ -120,10 +110,11 @@ h3::after {
 .precio {
   font-weight: bold;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  background-color: #f8f8f8; /* Fondo para destacar el precio */
-  padding: 5px; /* Espaciado dentro del precio */
-  transition: background-color 0.5s, color 0.5s; /* Transición para el fondo y el color al hacer hover */
+  background-color: #f8f8f8;
+  padding: 5px;
+  transition: background-color 0.5s, color 0.5s;
 }
+
   
 
 
@@ -145,24 +136,26 @@ a img{
   
 }
 
-.whatsapp{
+.whatsapp {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: bold;
   color: #d4299e;
   font-size: 2vw;
   margin: 1vw;
+  transition: transform 0.5s;
 }
 
-.whatsapp p{
+.whatsapp p {
   margin: 0.5vw;
 }
 
 .whatsapp img {
-  width: 10%; /* Ajusté el tamaño del enlace de WhatsApp para hacerlo más proporcional */
+  width: 10%;
   height: auto;
-  transition: transform 0.5s;
+  transition: transform 0.5s, filter 0.5s;
 }
 
 .whatsapp img:hover {
   transform: scale(1.2);
+  filter: brightness(1.1);
 }
